# diffguard

./: .gitignore  README.md  pyproject.toml
demo/: v2_demo.diff
diffguard/: __init__.py  cli.py
diffguard/analyzer/: __init__.py  diff_analyzer.py  intent_matcher.py
diffguard/core/: __init__.py  db.py  models.py
diffguard/debater/: __init__.py  arguments.py  debater.py
diffguard/learner/: __init__.py  context_learner.py
diffguard/server/: __init__.py  app.py  webhooks.py
diffguard/v2/: __init__.py  autofix.py  conversation.py  history.py  knowledge_graph.py  languages.py  models.py  performance.py  policies.py  review.py  reviewer.py  scoring.py  security.py  semantic_engine.py
tests/: test_analyzer.py  test_cli.py  test_core.py  test_debater.py  test_integration.py  test_learner.py  test_v2_languages.py  test_v2_review.py
