[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffguard"
version = "2.0.0"
description = "Production-grade semantic PR review agent with multi-language analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DiffGuard" }]
dependencies = [
  "click>=8.1",
  "fastapi>=0.100",
  "httpx>=0.24",
  "uvicorn>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
diffguard = "diffguard.cli:main"

[tool.setuptools.packages.find]
include = ["diffguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
